--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -1,99 +1,136 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="chat.scss" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<head>
+    <meta charset="UTF-8"/>
+    <link href="chat.scss" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com" rel="preconnect"/>
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
     <title>Giga-chat - chat</title>
-  </head>
-  <body>
+</head>
+<body>
+<main>
     <div class="chatContainer">
-      <div class="chatLeftWrapper">
-        <div class="chatHeaderLeftBlock">
-          <a href="/profile/profile.html" class="chatProfileLink">Профиль ></a>
-            <label class="chatHeaderInputLabel">
-                <input class="chatHeaderInput" placeholder="🔍 Поиск" />
-            </label>
+        <div class="chatLeftWrapper">
+            <div class="chatHeaderLeftBlock">
+                <a class="chatProfileLink" href="/profile/profile.html"
+                >Профиль ></a
+                >
+                <label class="chatHeaderInputLabel">
+                    <input class="chatHeaderInput" placeholder="🔍 Поиск"/>
+                </label>
+            </div>
+            <div class="chatBodyLeftBlock">
+                <a class="chatBlockWrapper" href="chat-view.html">
+                    <div class="avatar"></div>
+                    <div class="chatElementWrapper">
+                        <div class="chatElementTitle">Андрей</div>
+                        <div class="chatElementDescription">Изображение</div>
+                    </div>
+                    <div class="chatElementInfo">
+                        <div class="chatElementDateTime">10:49</div>
+                        <div class="chatElementCounter">2</div>
+                    </div>
+                </a>
+                <div class="divider"></div>
+                <a class="chatBlockWrapper" href="chat-view.html">
+                    <div class="avatar"></div>
+                    <div class="chatElementWrapper">
+                        <div class="chatElementTitle">Киноклуб</div>
+                        <div class="chatElementDescription">
+                            <b class="shortInfoTitle">Вы:</b> стикер
+                        </div>
+                    </div>
+                    <div class="chatElementInfo">
+                        <div class="chatElementDateTime">12:00</div>
+                    </div>
+                </a>
+                <div class="divider"></div>
+                <a class="chatBlockWrapper" href="chat-view.html">
+                    <div class="avatar"></div>
+                    <div class="chatElementWrapper">
+                        <div class="chatElementTitle">Илья</div>
+                        <div class="chatElementDescription">Изображение</div>
+                    </div>
+                    <div class="chatElementInfo">
+                        <div class="chatElementDateTime">15:12</div>
+                        <div class="chatElementCounter">4</div>
+                    </div>
+                </a>
+                <div class="divider"></div>
+                <a class="chatBlockWrapper" href="chat-view.html">
+                    <div class="avatar"></div>
+                    <div class="chatElementWrapper">
+                        <div class="chatElementTitle">тет-а-теты</div>
+                        <div class="chatElementDescription">
+                            И Human Interface Guidelines и Material Design рекомендуют...
+                        </div>
+                    </div>
+                    <div class="chatElementInfo">
+                        <div class="chatElementDateTime">Пт</div>
+                    </div>
+                </a>
+                <div class="divider"></div>
+                <a class="chatBlockWrapper" href="chat-view.html">
+                    <div class="avatar"></div>
+                    <div class="chatElementWrapper">
+                        <div class="chatElementTitle">1, 2, 3</div>
+                        <div class="chatElementDescription">
+                            Миллионы россиян ежедневно проводят десятки часов свое...
+                        </div>
+                    </div>
+                    <div class="chatElementInfo">
+                        <div class="chatElementDateTime">Ср</div>
+                    </div>
+                </a>
+                <div class="divider"></div>
+                <a class="chatBlockWrapper" href="chat-view.html">
+                    <div class="avatar"></div>
+                    <div class="chatElementWrapper">
+                        <div class="chatElementTitle">Design Destroyer</div>
+                        <div class="chatElementDescription">
+                            В 2008 году художник Jon Rafman  начал собирать...
+                        </div>
+                    </div>
+                    <div class="chatElementInfo">
+                        <div class="chatElementDateTime">Пн</div>
+                    </div>
+                </a>
+                <div class="divider"></div>
+                <a class="chatBlockWrapper" href="chat-view.html">
+                    <div class="avatar"></div>
+                    <div class="chatElementWrapper">
+                        <div class="chatElementTitle">Day.</div>
+                        <div class="chatElementDescription">
+                            Так увлёкся работой по курсу, что совсем забыл его анонсир...
+                        </div>
+                    </div>
+                    <div class="chatElementInfo">
+                        <div class="chatElementDateTime">1 Мая 2020</div>
+                    </div>
+                </a>
+                <div class="divider"></div>
+                <a class="chatBlockWrapper" href="chat-view.html">
+                    <div class="avatar"></div>
+                    <div class="chatElementWrapper">
+                        <div class="chatElementTitle">Стас Рогозин</div>
+                        <div class="chatElementDescription">
+                            Можно или сегодня или завтра вечером.
+                        </div>
+                    </div>
+                    <div class="chatElementInfo">
+                        <div class="chatElementDateTime">10:49</div>
+                        <div class="chatElementCounter">2</div>
+                    </div>
+                </a>
+                <div class="divider"></div>
+            </div>
         </div>
-          <div class="chatBodyLeftBlock">
-              <a href="chat-view.html" class="chatBlockWrapper">
-                  <div class="avatar"></div>
-                  <div class="chatElementWrapper">
-                      <div class="chatElementTitle">Андрей</div>
-                      <div class="chatElementDescription">Изображение</div>
-                  </div>
-                  <div class="chatElementInfo"><div class="chatElementDateTime">10:49</div><div class="chatElementCounter">2</div></div>
-              </a>
-              <div class="divider"></div>
-              <a href="chat-view.html" class="chatBlockWrapper">
-                  <div class="avatar"></div>
-                  <div class="chatElementWrapper">
-                      <div class="chatElementTitle">Киноклуб</div>
-                      <div class="chatElementDescription"><b class="shortInfoTitle">Вы:</b> стикер</div>
-                  </div>
-                  <div class="chatElementInfo"><div class="chatElementDateTime">12:00</div></div>
-              </a>
-              <div class="divider"></div>
-              <a href="chat-view.html" class="chatBlockWrapper">
-                  <div class="avatar"></div>
-                  <div class="chatElementWrapper">
-                      <div class="chatElementTitle">Илья</div>
-                      <div class="chatElementDescription">Изображение</div>
-                  </div>
-                  <div class="chatElementInfo"><div class="chatElementDateTime">15:12</div><div class="chatElementCounter">4</div></div>
-              </a>
-              <div class="divider"></div>
-              <a href="chat-view.html" class="chatBlockWrapper">
-                  <div class="avatar"></div>
-                  <div class="chatElementWrapper">
-                      <div class="chatElementTitle">тет-а-теты</div>
-                      <div class="chatElementDescription">И Human Interface Guidelines и Material Design рекомендуют...</div>
-                  </div>
-                  <div class="chatElementInfo"><div class="chatElementDateTime">Пт</div></div>
-              </a>
-              <div class="divider"></div>
-              <a href="chat-view.html" class="chatBlockWrapper">
-                  <div class="avatar"></div>
-                  <div class="chatElementWrapper">
-                      <div class="chatElementTitle">1, 2, 3</div>
-                      <div class="chatElementDescription">Миллионы россиян ежедневно проводят десятки часов свое...</div>
-                  </div>
-                  <div class="chatElementInfo"><div class="chatElementDateTime">Ср</div></div>
-              </a>
-              <div class="divider"></div>
-              <a href="chat-view.html" class="chatBlockWrapper">
-                  <div class="avatar"></div>
-                  <div class="chatElementWrapper">
-                      <div class="chatElementTitle">Design Destroyer</div>
-                      <div class="chatElementDescription">В 2008 году художник Jon Rafman  начал собирать...</div>
-                  </div>
-                  <div class="chatElementInfo"><div class="chatElementDateTime">Пн</div></div>
-              </a>
-              <div class="divider"></div>
-              <a href="chat-view.html" class="chatBlockWrapper">
-                  <div class="avatar"></div>
-                  <div class="chatElementWrapper">
-                      <div class="chatElementTitle">Day.</div>
-                      <div class="chatElementDescription">Так увлёкся работой по курсу, что совсем забыл его анонсир...</div>
-                  </div>
-                  <div class="chatElementInfo"><div class="chatElementDateTime">1 Мая 2020</div></div>
-              </a>
-              <div class="divider"></div>
-              <a href="chat-view.html" class="chatBlockWrapper">
-                  <div class="avatar"></div>
-                  <div class="chatElementWrapper">
-                      <div class="chatElementTitle">Стас Рогозин</div>
-                      <div class="chatElementDescription">Можно или сегодня или завтра вечером.</div>
-                  </div>
-                  <div class="chatElementInfo"><div class="chatElementDateTime">10:49</div><div class="chatElementCounter">2</div></div>
-              </a>
-              <div class="divider"></div>
-
-
-          </div>
-      </div>
-        <div class="chatRightWrapper"><div class="chatMessageBlock"><p>Выберите чат, чтобы отправить сообщение</p></div></div>
+        <div class="chatRightWrapper">
+            <div class="chatMessageBlock">
+                <p>Выберите чат, чтобы отправить сообщение</p>
+            </div>
+        </div>
     </div>
-  </body>
+</main>
+</body>
 </html>
